# ESMFIOW

./: CMakeLists.txt  README.md  fpm.toml
.github/workflows/: ci.yml
cmake/: esmfiow-config.cmake.in
doc/: CMakeLists.txt  Doxyfile  footer.html  header.html  main_page.dox  parallel_io.md  parallel_io_page.dox  user_guide.md
example/: CMakeLists.txt  cf_example.f90  climate_model_integration.f90  data_analysis_tool.f90  example.f90  example_complete_workflow.f90  grid_example.f90  parallel_compression_example.f90
src/: esmfiow.f90  esmfiow_cf_utils.f90  esmfiow_constants.f90  esmfiow_esmf_io.f90  esmfiow_field.f90  esmfiow_grid.f90  esmfiow_io.f90  esmfiow_netcdf4.f90
test/: CMakeLists.txt  integration_test.f90  test_cf_utils.f90  test_complete_integration.f90  test_esmfiow.f90  test_field.f90  test_grid.f90  test_io.f90  test_parallel_io.f90
